ecmascript/parser/tests/test262-error-references/fail/cc28dc2255cfe34d.js.stderr
error: Unexpected token `}`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/cc28dc2255cfe34d.js:1:23
  |
1 | (function*() { yield* })
  |                       ^

